--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day-9</title>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
@@ -42,7 +41,57 @@
 
     <hr class="my-5">
 
+    <div class="row container mx-auto">
+        <div class="col border col-1 d-flex justify-content-center align-items-center text-white bg-primary">Margin</div>
+        <div class="col col-10">
+           <div class="row">
+            <div class="col border col-6 d-flex justify-content-center align-items-center text-white bg-primary mx-1" style="height:280px;">Gallery</div>
+            <div class="col me-1">
+                <div class="row border d-flex justify-content-center align-items-center text-white bg-primary" style="height: 50px;">Title</div>
+                <div class="row d-flex border justify-content-center align-items-center text-white bg-primary" style="height: 230px;">Buy Box</div>
+        </div>
+           </div>
+           <div class="row my-1 " style="height: 90px;"> <div class="col border d-flex justify-content-center align-items-center text-white bg-primary mx-1">Description</div> </div>
+           <div class="row my-1 " style="height: 90px;"> <div class="col border d-flex justify-content-center align-items-center text-white bg-primary mx-1">Related</div> </div>
+        </div>
+        <div class="col col-1 d-flex justify-content-center align-items-center text-white bg-primary">Margin</div>
+    </div>
+ <hr class="my-5">
 
+   <div class="container mx-auto">
+        <div class="row">
+            <div class="col bg-success d-flex justify-content-center align-items-center" style="font-size: 48px;">FULL WIDTH</div>
+        </div>
+        <div class="row my-3">
+            <div class="col d-flex justify-content-center align-items-center bg-info me-3" style="font-size: 48px;">HALF WIDTH</div>
+            <div class="col d-flex justify-content-center align-items-center bg-info " style="font-size: 48px;">HALF WIDTH</div>
+        </div>
+        <div class="row ">
+            <div class="col d-flex justify-content-center align-items-center me-3" style="font-size: 48px; background-color: pink;">THIRD </div>
+            <div class="col d-flex justify-content-center align-items-center me-3 " style="font-size: 48px; background-color: pink;">THIRD</div>
+            <div class="col d-flex justify-content-center align-items-center " style="font-size: 48px; background-color: pink;">THIRD </div>
+        </div>
+        <div class="row my-3">
+            <div class="col d-flex justify-content-center align-items-center me-3 bg-warning " style="font-size: 48px;">TWO THIRD</div>
+            <div class="col d-flex justify-content-center align-items-center col-4 bg-warning " style="font-size: 48px;">THIRD</div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center align-items-center me-3 bg-secondary" style="font-size: 48px;">1/4</div>
+            <div class="col d-flex justify-content-center align-items-center me-3 bg-secondary" style="font-size: 48px;">1/4</div>
+            <div class="col d-flex justify-content-center align-items-center me-3 bg-secondary" style="font-size: 48px;">1/4</div>
+            <div class="col d-flex justify-content-center align-items-center bg-secondary" style="font-size: 48px;">1/4</div>
+        </div>
+        <div class="row my-3">
+            <div class="col d-flex justify-content-center align-items-center me-3 bg-danger col-9" style="font-size: 48px;">3/4</div>
+            <div class="col d-flex justify-content-center align-items-center bg-danger " style="font-size: 48px;">1/4</div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center align-items-center bg-info me-3 col-1" style="font-size: 48px;">1</div>
+            <div class="col d-flex justify-content-center align-items-center bg-info me-3" style="font-size: 48px;">10 Column</div>
+            <div class="col d-flex justify-content-center align-items-center bg-info col-1" style="font-size: 48px;">1</div>
+        </div>
+   </div>
 
+<hr class="my-5">
 </body>
 </html>
