--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="row container mx-auto h-500" style="height: 75px;">
+    <div class="row container mx-auto mt-5 h-500" style="height: 75px;">
         <div class="col border bg-primary text-white">.col-4</div>
         <div class="col border bg-primary text-white">.col-4</div>
         <div class="col border bg-primary text-white">.col-4</div>
